--- a/index.html
+++ b/index.html
@@ -23,10 +23,32 @@
     <section id='secondSection' style="height: 50vh">
         2nd
     </section>
-    
     <section id='thirdSection' style="height: 50vh">
-        3rd
+        <div class="bas" style="height: 50vh">
+            <div class="div_a">
+                <form> 
+                    <input  type="text" name="nom" placeholder="FirstName">
+                    <input  type="text" name="nom" placeholder="LastName">
+                    <input  type="text" name="nom" placeholder="Phone number">
+                    <input  type="text" name="nom" placeholder="Email adress">
+                    <!-- <a href="#" class="button"></a> -->
+                    <input class="button" type="submit" value="Envoyer">
+                </form>
+            </div>
+            <div class="div_b">
+                <h3>Renseignez Vos Coordonnées et recevez <br> Votre ticket Pour la grande finale !</h3>
+                <img src="./img/6d266f80089253.5f8e0ca892a02.png" alt="photo_ticket" style= "height: 20vh;">
+            </div>
+        </div>
     </section>
+    <footer>
+        <div class="div_c">
+            <a href="#">Conditions d'utilisations</a>
+            <a href="#">Contact</a>
+            <a href="#">Mentions légales</a>
+
+        </div>
+    </footer>
 
 
 
