Header + first section

--- a/index.html
+++ b/index.html
@@ -16,28 +16,94 @@
 </head>
 
 <body>
-    <section id='firstSection' style="height: 50vh">
-        1st
+    <!-------------------------HEADER-------------------------->
+    <header>
+
+        <!-------------------------NAVBAR-------------------------->
+        <nav>
+            <!--NAVBAR CONTAINER-->
+            <div class="menuNav">
+
+                <!--NAVBAR LOGO-->
+                <div>
+                    <img class="menuNav__logo" src="img/logo-fifa.png" alt="Logo Fifa">
+                </div>
+
+                <!--NAVBAR ITEMS-->
+                <div class="menuNav__div">
+                    <ul class="menuNav__list">
+                        <li><a class="menuNav__list_link" href="#">L'Evenement !</a></li>
+                        <li><a class="menuNav__list_link" href="#">Partenaires</a></li>
+                        <li><a class="menuNav__list_link" href="#">Infos</a></li>
+                        <li><a class="menuNav__list_link" href="#">Contact</a></li>
+                    </ul>
+                </div>
+
+                <!--NAVBAR ICONES-->
+                <div class="menuNav__div">
+                    <ul class="menuNav__list">
+                        <li><a href="#"><img class="menuNav__list_icones" src="img/search.png" alt="search icones"></a>
+                        </li>
+                        <li><a href="#"><img class="menuNav__list_icones" src="img/tickets.png"
+                                    alt="tickets icones"></a></li>
+                        <li><a href="#"><img class="menuNav__list_icones" src="img/user.png" alt="user icones"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
+    <!-------------------------FIRST SECTION-------------------------->
+    <section>
+
+        <!--FIRST SECTION CONTAINER-->
+        <div class="firstSection__global_div">
+
+            <!--FIRST SECTION IMG BACKGROUND + TEXT-->
+
+            <div class="firstSection__imgBackground_div">
+
+                <div class="firstSection__text">
+                    <h1>Finale coupe du monde de football 2022</h1>
+                    <p>Venez soutenir votre équipe pour cette finale qui s'annonce spéctaculaire dans la fan zone du
+                        stade
+                        de France !</p>
+                </div>
+
+                <!--FIRST SECTION FLY + TEXT-->
+                <div class="firstSection__fly">
+                    <img class="firstSection__fly_img" src="img/france.png" alt="Drapeau France">
+                    <p class="firstSection__fly_text">VS</p>
+                    <img class="firstSection__fly_img" src="img/allemagne.png" alt="Drapeau Allemagne">
+                </div>
+
+            </div>
+        </div>
     </section>
 
-    <section id='secondSection' style="height: 50vh">
+
+    <!-------------------------SECOND SECTION-------------------------->
+
+
+    <section id='secondSection' style="height: 45vh">
         2nd
     </section>
     <section id='thirdSection' style="height: 50vh">
         <div class="bas" style="height: 50vh">
             <div class="div_a">
-                <form> 
-                    <input  type="text" name="nom" placeholder="FirstName">
-                    <input  type="text" name="nom" placeholder="LastName">
-                    <input  type="text" name="nom" placeholder="Phone number">
-                    <input  type="text" name="nom" placeholder="Email adress">
+                <form>
+                    <input type="text" name="nom" placeholder="FirstName">
+                    <input type="text" name="nom" placeholder="LastName">
+                    <input type="text" name="nom" placeholder="Phone number">
+                    <input type="text" name="nom" placeholder="Email adress">
                     <!-- <a href="#" class="button"></a> -->
                     <input class="button" type="submit" value="Envoyer">
                 </form>
             </div>
             <div class="div_b">
                 <h3>Renseignez Vos Coordonnées et recevez <br> Votre ticket Pour la grande finale !</h3>
-                <img src="./img/6d266f80089253.5f8e0ca892a02.png" alt="photo_ticket" style= "height: 20vh;">
+                <img src="./img/6d266f80089253.5f8e0ca892a02.png" alt="photo_ticket" style="height: 20vh;">
             </div>
         </div>
     </section>
